# gm-git

./: .bazelrc  .gitignore  MODULE.bazel  Makefile  README.md  WORKSPACE
.clwb/: .bazelproject
.github/workflows/: ci.yaml
cpp/cmd/: BUILD  gm-git.cc
cpp/lib/: BUILD  add.cc  my_math.h  sub.cc
cpp/lib/cli/: BUILD  add.cc  arg_type.cpp  arg_type.h  arg_type_mock.h  arg_type_test.cpp  cli_test.cc  command.cc  command.cpp  command.h  command_test.cc  command_test.cpp  flag.cpp  flag.h  flag_test.cpp
cpp/lib/cli/args/: BUILD  arg_type.cpp  arg_type_test.cpp
cpp/lib/cli/command/: BUILD  command.cpp  command.h  command_test.cpp
cpp/lib/cli/context/: BUILD  builder.cpp  context.cpp  context.h  context_test.cpp
cpp/lib/cli/flags/: BUILD  flag.cpp  flag.h  flag_test.cpp
cpp/lib/cli/mocks/: BUILD  arg_type_mock.h  flag_mock.h
docs/: README.md
docs/cli-parsing/: README.md
tests/unit/: BUILD  gtests.cc  my_math_test.cc
